# CryptoTrader-AI

./: .env.example  .gitignore  LICENSE  Makefile  README.md  alembic.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dashboard/: index.html  simple.html
docker/: Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md
docs/guides/: DEPLOYMENT.md  LIVE_TRADING.md
langgraph/: __init__.py  graph.py
langgraph/checkpoint/: base.py
migrations/: __init__.py  env.py
migrations/versions/: 001_initial.py  002_phase1_security.py  003_phase2_market_data.py  004_phase3_approvals.py  __init__.py
scripts/: cli.py  setup_github.sh  start.sh
src/: __init__.py
src/agents/: __init__.py  execution_agent.py  market_analyst.py  orchestrator.py  portfolio_agent.py  signal_agent.py
src/agents/graph/: __init__.py  orchestrator_graph.py  runtime.py  state.py
src/agents/graph/checkpointing/: redis_checkpointer.py
src/agents/graph/nodes/: __init__.py  approval_gate.py  execution_agent.py  market_analyst.py  portfolio_agent.py  risk_engine.py  signal_agent.py
src/api/: __init__.py  backtest_routes.py
src/api/auth/: __init__.py  jwt.py  router.py
src/api/middleware/: __init__.py  audit_logger.py  cors.py  rate_limiter.py
src/api/routes/: __init__.py  analytics.py  approvals.py  history.py  llm_routes.py
src/backtesting/: __init__.py  engine.py
src/core/: __init__.py  config.py  models.py  server.py  vault.py
src/db/: __init__.py  database.py  models.py  redis_client.py  timescale.py  user_repository.py
src/exchange/: __init__.py  ccxt_adapter.py  indicators.py  paper_engine.py  websocket_feed.py
src/graph_analysis/: __init__.py  correlation.py
src/llm/: __init__.py  base.py  factory.py
src/llm/providers/: __init__.py  anthropic_provider.py  gemini_provider.py  groq_provider.py  mistral_provider.py  ollama_provider.py  openai_provider.py  openrouter_provider.py  together_provider.py
src/memory/: __init__.py  embeddings.py  qdrant_client.py  retriever.py  signal_store.py
src/notifications/: __init__.py  telegram.py
src/risk/: __init__.py  engine.py  risk_engine.py
src/strategies/: __init__.py  strategies.py
src/utils/: __init__.py  logger.py  scheduler.py
tests/: conftest.py  run_all.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_pipeline.py
tests/unit/: __init__.py  test_backtest_engine.py  test_execution_agent.py  test_indicators.py  test_llm_providers.py  test_paper_engine.py  test_phase1_auth.py  test_phase2_event_pipeline.py  test_phase3_graph.py  test_phase4_memory_analytics.py  test_portfolio_agent.py  test_risk_engine.py
