[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "crypto-trading-agent"
version = "1.0.0"
description = "Multi-agent AI crypto trading system powered by Claude"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["crypto", "trading", "ai", "agents", "algorithmic"]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "anthropic>=0.40",
    "aiohttp>=3.10",
    "httpx>=0.27",
    "apscheduler>=3.10",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "structlog>=24.4",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
multi-exchange = ["ccxt>=4.4"]
telegram = ["python-telegram-bot>=21.6"]
postgres = ["asyncpg>=0.29"]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]
all = [
    "crypto-trading-agent[multi-exchange,telegram,postgres,dev]"
]

[project.scripts]
trader = "src.core.server:app"
trader-cli = "scripts.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

# ── Ruff (linter) ────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["migrations", "venv", ".venv", "__pycache__", ".github"]

[tool.ruff.lint]
# E = pycodestyle errors, F = pyflakes (undefined names, unused imports)
# Deliberately NOT including UP/N/B/SIM/C4 — those are opinionated style rules
# that would require reformatting the entire codebase
select = ["E", "F"]
ignore = [
    "E501",   # line too long — handled by formatter, not a bug
    "E402",   # module level import not at top — needed for conditional imports
    "F401",   # imported but unused — many __init__.py re-exports
    "F811",   # redefinition of unused name — common in test fixtures
    "F841",   # local variable assigned but never used
]

[tool.ruff.lint.per-file-ignores]
"tests/*"        = ["E501", "F401", "F811", "F841"]
"migrations/*"   = ["E501", "F401"]
"src/**/__init__.py" = ["F401"]  # __init__.py re-exports are intentional

# ── Mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
exclude = ["migrations", "tests"]

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "WARNING"
addopts = "-v --tb=short"

# ── Coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["app"]
omit = ["app/main.py", "migrations/*", "tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 60
